Fix off-center styling for bronze supporter

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -556,7 +556,7 @@ a.solid:hover, a.solid:focus {
   min-width: 15rem;
 }
 .Supporters .supporter-list.bronze .supporter, .Supporters .supporter-list.partner .supporter {
-  width: calc(25% - 2rem);
+  /* width: calc(25% - 2rem); */
   min-width: 10rem;
 }
 .Supporters .description {
